deploy/canary-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
  labels:
    app: demo
  name: demo-ingress
  namespace: demo-canary
spec:
  rules:
  - host: test.tushar10pute.click
    http:
      paths:
      - backend:
          service:
             name: demo-canary
             port:
               number: 80
        path: /
        pathType: Prefix
---
